--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.28",
     "axios": "^1.6.2",
+    "moment": "^2.30.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
