--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^9.1.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "tailwindcss-scoped-groups": "^2.0.0"
   },
