--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.28",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.2.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,7 +26,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
-    "tailwindcss-scoped-groups": "^2.0.0"
+    "tailwindcss-scoped-groups": "^2.0.0",
+    "twilio": "^4.22.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
