--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fashion_store",
+  "name": "dev-trendy-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^1.0.28",
-    "axios": "^1.6.2",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
     "mongoose": "^8.2.0",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
-    "tailwindcss-scoped-groups": "^2.0.0",
     "twilio": "^4.22.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
