--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
@@ -22,9 +23,11 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
-    "twilio": "^4.22.0"
+    "twilio": "^4.22.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/react": "^18.2.58",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
