--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
